UCSFD8-359 fixed wrapping of flex rows in mobile

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -3101,7 +3101,13 @@ body.loading .quicklinks {
   font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-flow: row wrap;
+      flex-flow: row wrap; }
   .article-header__byline .news-card__primary-area,
   .article-header__byline .article-header__primary-area,
   .news-card__byline .news-card__primary-area,
@@ -5606,15 +5612,18 @@ figure.align-center {
     margin-bottom: 0 !important; }
 
 .media-coverage__list-byline {
+  margin: 0;
+  font-size: 14px;
+  font-family: "HelveticaNeueLTW04-55Roman", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0;
-  font-size: 14px;
-  font-family: "HelveticaNeueLTW04-55Roman", "HelveticaNeue", "Helvetica", "Arial", sans-serif; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-flow: row wrap;
+      flex-flow: row wrap; }
 
 .field-featured-media-article .news-card__date,
 .media-coverage__list-date,
